# irc_nowplaying

./: Cargo.toml  README.md  nowplaying.mrc
.github/workflows/: ci.yml
src/: lib.rs  mirc.rs
