[package]
name = "irc_nowplaying"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Byrnes (@realJoshByrnes on GitHub)"]

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
windows = { version = "0.58.0", features = [
  "Win32",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading"
] }
